--- a/Core/projectConfig.ui
+++ b/Core/projectConfig.ui
@@ -36,7 +36,7 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_prefs">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
         <property name="topMargin">
          <number>50</number>
         </property>
