--- a/Core/submitToFarmWidget.ui
+++ b/Core/submitToFarmWidget.ui
@@ -188,6 +188,16 @@
        </item>
        <item>
         <property name="text">
+         <string>Yeti</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>1080TI</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>Redshift</string>
         </property>
        </item>
